crates/batuta-tui/tests/snapshots/panels_attention__attention_empty_100x30.snap
---
source: crates/batuta-tui/tests/panels_attention.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 0 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions · all sessions───────────┐┌[4] Detail────────────────────────────────────────────────┐"
"│no sessions — press n to start one    ││select a session or run                                   │"
"└──────────────────────────────────────┘│                                                          │"
"┌[2] Deliver runs · batuta-deliver─────┐│                                                          │"
"│no runs for batuta-deliver — press * f││                                                          │"
"└──────────────────────────────────────┘│                                                          │"
"┌[3] Attention (0)─────────────────────┐│                                                          │"
"│nothing needs attention               ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"1-4 focus  Tab/Shift+Tab next/previous  w workspace  L logs  ?/F1 help  q/Ctrl+C quit  j/k/↑/↓/PgUp/"
