crates/batuta-tui/tests/snapshots/panels_attention__attention_three_sources_120x40.snap
---
source: crates/batuta-tui/tests/panels_attention.rs
expression: "render(&model, 120, 40)"
---
"batuta · ws: workspace ▾ · daemon running · 3 attention                                                                 "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                                           "
"┌[1] Sessions · all sessions───────────────────┐┌[4] Detail────────────────────────────────────────────────────────────┐"
"│> ● batuta  spike plan  0s                    ││select a session or run                                               │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[2] Deliver runs · batuta-deliver─────────────┐│                                                                      │"
"│no runs for batuta-deliver — press * for all  ││                                                                      │"
"└──────────────────────────────────────────────┘│                                                                      │"
"┌[3] Attention (3)─────────────────────────────┐│                                                                      │"
"│> ▪ permission  Bash: rm -rf build/  —        ││                                                                      │"
"│  ? clarify  Which environment?  0s           ││                                                                      │"
"│  ! approval  task gate  0s                   ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"└──────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
"a allow · x reject · A/X always                                                                                         "
