crates/batuta-tui/tests/snapshots/panels_attention__clarification_choices_100x30.snap
---
source: crates/batuta-tui/tests/panels_attention.rs
expression: "render(&model, 100, 30)"
---
"batuta · ws: workspace ▾ · daemon running · 3 attention                                             "
"warning: daemon version dev — compatibility unverified (floor v0.3.0-beta.16)                       "
"┌[1] Sessions ·┌clarify · deadline 2025-08-19T00:10:00Z─────────────────────────────┐──────────────┐"
"│> ● batuta  sp│Which environment?                                                  │              │"
"└──────────────│> 1  staging                                                        │              │"
"┌[2] Deliver ru│  2  production                                                     │              │"
"│no runs for ba│  3  both                                                           │              │"
"└──────────────│Enter · Esc                                                         │              │"
"┌[3] Attention │                                                                    │              │"
"│  ▪ permission│                                                                    │              │"
"│> ? clarify  W│                                                                    │              │"
"│  ! approval  │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"Enter answer                                                                                        "
